fix vertical align in rows and cursor set to default

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@ main {
   height: 100%;
   width: 100%;
   text-align: center;
+  cursor: default;
 
 }
 a {
