--- a/src/pages/Admin/components/Table/TableRow.scss
+++ b/src/pages/Admin/components/Table/TableRow.scss
@@ -1,6 +1,7 @@
 .table-row {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
+    align-items: center;
     padding: 8px 10px;
     &:hover {
         background: #2A3D43;
